fix misaligned button widths/lengths

--- a/100-js-projects/tip-calculator/style.css
+++ b/100-js-projects/tip-calculator/style.css
@@ -168,14 +168,15 @@ output {
 }
 
 .tip-buttons {
-    display: flex;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .tip-button {
-    width: 48%;
+    width: 48.5%;
+    margin-bottom: 10px;
     padding: 25px;
     background-color: #63007746;
     color: rgb(0, 0, 0);
